[gd_scene load_steps=6 format=3 uid="uid://nl1u2qwahjur"]

[ext_resource type="Script" path="res://levels/base_level.gd" id="1_yv5k7"]
[ext_resource type="PackedScene" uid="uid://lfrg5u0s82ev" path="res://levels/kill_zone.tscn" id="2_gsrd4"]
[ext_resource type="PackedScene" uid="uid://wt0gmvoqrp4g" path="res://entities/goal/goal.tscn" id="3_osppe"]
[ext_resource type="PackedScene" uid="uid://bp1kdqo8y8k17" path="res://entities/stopwatch/stopwatch.tscn" id="4_kanmi"]
[ext_resource type="PackedScene" uid="uid://bqivcejot0rn1" path="res://tiles/tile_map_layer.tscn" id="5_hmxti"]

[node name="BaseLevel" type="CanvasLayer"]
script = ExtResource("1_yv5k7")

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(108, 487)

[node name="KillZone" parent="." instance=ExtResource("2_gsrd4")]
position = Vector2(475, 756)

[node name="Goal" parent="." instance=ExtResource("3_osppe")]
position = Vector2(987, 336)

[node name="Stopwatch" parent="." instance=ExtResource("4_kanmi")]

[node name="TileMapLayer" parent="." instance=ExtResource("5_hmxti")]

[connection signal="timeout" from="Stopwatch" to="." method="_on_stopwatch_timeout"]
